# AI-bodycheck-report

./: .env  .gitignore  CHANGELOG.md  README.md  docker-compose.yml  index.html  package.json  pnpm-lock.yaml  vite.config.ts
backend/: Dockerfile  main.py  model.py  moonshot.py  prompts.py  pyproject.toml  requirements.txt
backend/routes/: base.py  generate_result.py  home.py
frontend/: .gitignore  .npmrc  Dockerfile  package.json  pnpm-lock.yaml  vite.config.ts
frontend/public/static/: config.js  data.json
frontend/src/: other-imports.ts
frontend/src/api/business/: ai.ts
frontend/src/components/Markdown/: MarkdownBlock.vue  MarkdownEdit.vue
frontend/src/environment/: model.ts
frontend/src/store/: index.ts
frontend/src/store/base/: permission.ts  user.ts
frontend/src/styles/: index.scss
frontend/src/utils/base/: typewriter.ts  websocket.ts
frontend/src/utils/http/: index.ts
frontend/src/views/Home/: index.vue
frontend/src/views/Home/LeftPannel/: index.vue
public/static/: config.js  data.json  userData.json
src/: env.d.ts
src/api/business/: ai.ts
src/components/AIEmpty/: index.vue
src/components/Markdown/: MarkdownBlock.vue  MarkdownEdit.vue
src/environment/modules/: dev.ts
src/fits-components/Form/Checkbox/: model.ts
src/fits-components/Form/Input/: FitsInputSearch.vue
src/router/: index.ts  routerGuard.ts
src/store/: index.ts
src/styles/: index.scss
src/utils/http/: index.ts  interceptors.ts  types.ts
src/views/Home/: index.vue
src/views/Home/LeftPannel/: index.vue
src/views/Home/RightPannel/: index.vue
(+8 files in other folders)
